<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/addButtonAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addButtonAddItem" />

    <Button
        android:id="@+id/payButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payButton" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalTextView"
        android:gravity="center_horizontal"
        android:textSize="24sp" />
</LinearLayout>
